--- a/app/src/main/res/layout/activity_spalsh_screen.xml
+++ b/app/src/main/res/layout/activity_spalsh_screen.xml
@@ -20,6 +20,7 @@
             android:layout_height="180dp" />
 
         <ProgressBar
+            android:visibility="invisible"
             style="@android:style/Widget.Holo.Light.ProgressBar.Large"
             android:id="@+id/progress_login"
             android:layout_width="wrap_content"
